# trackhands

./: .gitignore  .prettierignore  AGENT.md  CHANGELOG.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json  vite.config.ts
.cursor/commands/: create-pr.md  release.md
.github/workflows/: release.yml
site/: index.html  package.json  pnpm-lock.yaml
site/public/: robots.txt  sitemap.xml
site/src/: App.tsx  index.css
site/src/components/: GitHubIcon.tsx  HowItWorks.tsx  cta.tsx  demo.tsx  features.tsx  footer.tsx  github-icon.tsx  hero.tsx  how-it-works.tsx  index.ts  navbar.tsx  privacy.tsx
site/src/lib/: detection.ts
site/src/pages/: home.tsx  index.ts  privacy-policy.tsx
src/: app.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src/components/popover-window/: popover-window.tsx
src/components/popover-window/components/: camera.tsx  settings-button.tsx  settings.tsx  window-controls.tsx
src/components/popover-window/components/camera/: camera-with-detection.tsx  camera.tsx
src/components/popover-window/components/camera/components/: overlay-canvas.tsx  status-badge.tsx
src/components/warning-window/: warning-window.tsx
src/hooks/: use-camera.ts  use-detection.ts  use-mediapipe.ts  use-settings.ts
src/lib/: storage-keys.ts  tray-status.ts
src/lib/detection/: constants.ts  geometry.ts
src/stores/: app-store.ts
(+1 files in other folders)
